# council-of-bots-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RULES.md
.github/workflows/: auto-approve-and-merge.yml  rust-ci.yml
bots/contrarian-bot/: Cargo.toml
bots/contrarian-bot/src/: lib.rs
bots/cycle-bot/: Cargo.toml
bots/cycle-bot/src/: lib.rs
bots/example-bot/: Cargo.toml
bots/example-bot/src/: lib.rs
bots/first-bot/: Cargo.toml
bots/first-bot/src/: lib.rs
bots/llm-bot/: Cargo.toml
bots/llm-bot/src/: lib.rs
bots/oracle-bot/: Cargo.toml
bots/oracle-bot/src/: lib.rs
council-cli/: Cargo.toml
council-cli/src/: main.rs
council-core/: Cargo.toml
council-core/src/: event.rs  explorer.rs  galaxy.rs  lib.rs  ollama.rs  scoring.rs  templates.rs  voting.rs
docs/plans/: 2026-01-23-galactic-exploration-design.md
