[package]
name = "council-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
council-core = { path = "../council-core" }
example-bot = { path = "../bots/example-bot" }
first-bot = { path = "../bots/first-bot" }
cycle-bot = { path = "../bots/cycle-bot" }
contrarian-bot = { path = "../bots/contrarian-bot" }
